--- a/index.html
+++ b/index.html
@@ -1,26 +1,18 @@
 ---
 layout: default
-title:  'Bryan D Martin'
+title:  'SPA Directed Reading Program'
 ---
 
 <div class="row featurette">
 <div class="col-md-4">
-  <img class="featurette-image img-responsive" src="images/me.jpg">
 </div>
-  
-  
+
+
 <div class="col-md-8">
   <h2 class="featurette-heading">About </h2>
   <p class="lead">
-  I am a PhD student in the <a href = "http://www.stat.washington.edu/">Department of Statistics</a> 
-    at the University of Washington. My research is focused on model development for compositional data applied to the
-    microbiome, advised by 
-    <a href = "https://faculty.washington.edu/dwitten/">Daniela Witten</a> and 
-    <a href = "https://faculty.washington.edu/adwillis/">Amy Willis</a>. My research is supported by an 
-<a href="http://www.nsfgrfp.org/">NSF Graduate Research Fellowship</a>. <br/>
-<br/>
-Before coming to UW, I was an undergraduate at <a href = " https://www.macalester.edu/">Macalester College</a> 
-    where I received degrees in statistics and economics.
+  Welcome to the homepage for the Directed Reading program of the <a href = "http://students.washington.edu/spassc/">Statistics and Probability Association</a>
+  at the University of Washington.  Insert description and links here.
   </p>
 </div>
 </div>
@@ -28,17 +20,14 @@ Before coming to UW, I was an undergraduate at <a href = " https://www.macaleste
   <div class="col-md-12">
  <div style="position: relative; bottom: -30px;">
        <center><p class = "lead">
-  <a href = "https://github.com/bryandmartin"><i class="fa fa-github" aria-hidden="true"></i> bryandmartin </a> 
+  <a href = "https://github.com/bryandmartin"><i class="fa fa-github" aria-hidden="true"></i> Make this a link to other DRPS </a>
          &nbsp;&nbsp;|&nbsp;&nbsp;
-  <a href = "https://twitter.com/BryanDMartin_"><i class="fa fa-twitter" aria-hidden="true"></i> BryanDMartin_ </a>
+  <a href = "https://twitter.com/BryanDMartin_"><i class="fa fa-twitter" aria-hidden="true"></i> Make this a link to UW Math GRP </a>
          &nbsp;&nbsp;|&nbsp;&nbsp;
-  <a href = "https://scholar.google.com/citations?user=FdKKjKUAAAAJ"> Google Scholar </a>       
+  <a href = "https://scholar.google.com/citations?user=FdKKjKUAAAAJ"> Link to UW Stats?  </a>
          </p></center>
-    </div>                                                                                
+    </div>
  </div>
 
-  
+
 </div><!-- /.container -->
-
-  
-
