--- a/default.html
+++ b/default.html
@@ -2,14 +2,14 @@
 <html>
 <head>
    <meta charset="utf-8">
-   <meta name="keywords" content="bryan d martin,
-	bryan martin,
-	uw statistics,
-	uw biostatistics,
-	bryandmartin,
-	university of washington statistics,
-	university of washington biostatistics,
-	macalester college">
+   <meta name="keywords" content="Directed Reading Program,
+	UW Statistics,
+	UW Spa,
+	Undergraduate Research,
+	Mentorship,
+	Independent Study,
+	Anna Neufeld,
+	Emily Flanagan>
    <title>{{ site.title }}</title>
 
    <link rel="stylesheet" type="text/css" href="{{ site.path }}/css/style.css" >
@@ -60,8 +60,8 @@
 
   gtag('config', 'UA-113521888-1');
 </script>
-	
-	
-	
+
+
+
 </body>
 </html>
