--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ title:  'SPA Directed Reading Program'
 
 <div class="row featurette">
 <div class="col-md-4">
+  <img class="featurette-image img-responsive" src="images/me.jpg">
 </div>
 
 
