Sections on homepage

--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@ title:  'SPA Directed Reading Program'
   <h2 class="featurette-heading">About </h2>
   <p class="lead">
   Welcome to the homepage for the Directed Reading program of the <a href = "http://students.washington.edu/spassc/">Statistics and Probability Association</a>
-  at the University of Washington.  Insert description and links here.
+  at the University of Washington. A Directed Reading Program (DRP) pairs undergraduates with graduate student mentors for semester-long independent study projects.
+  After an initial succesful program in mathematics was piloted at the University of Chicago in 2003, programs with this mission have been started at a variety of Universities, usually in mathematics departments.
+  Our program at UW, intended for students with a budding interest in statistics, will run for the first time in Winter, 2020.
+  </p>
+</div>
+
+<div class="col-md-8">
+  <h2 class="featurette-heading">For Undergraduates: </h2>
+  <p class="lead">
+  <h3> Who should apply? </h3>
+  <h3> How to apply? </h3>
+  <h3> What types of projects? </h3>
   </p>
 </div>
 </div>
