Hopefully adding a bunch of text

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@ title:  'SPA Directed Reading Program'
   After an initial succesful program in mathematics was piloted at the University of Chicago in 2003, programs with this mission have been started at a variety of Universities, usually in mathematics departments.
   Our program at UW, intended for students with a budding interest in statistics, will run for the first time in Winter, 2020.
   </p>
+  <p>
+    The goal of the program is to increase the sense of community between graduate students and undergraduate students in the department at University of Washington, to give graduate Students
+    valuable mentoring experience, and to allow undergraduates to explore exciting topics in statistics prior to completeing core coursework. 
+  </p>
 </div>
 
 <div class="col-md-8">
@@ -23,7 +27,20 @@ title:  'SPA Directed Reading Program'
   <p class="lead">
   <h3> Who should apply? </h3>
   <h3> How to apply? </h3>
+  <h3> What should I expect? </h3>
+  As an undergraduate, you should expect to commit around 4 hours per week to independent reading related to your project.
+  You are required to meet with your graduate mentor once a week for an hour, and at the end of the quarter
+  you will complete a writeup of your project and you will give a 10 minute presentation to the other participants.
   <h3> What types of projects? </h3>
+  </p>
+</div>
+</div>
+
+<div class="col-md-8">
+  <h2 class="featurette-heading">For Graduate Students: </h2>
+  <p class="lead">
+  If you are interested in being a mentor, please contact Anna Neufeld (aneufeld@uw.edu)
+  or Emily Flanagan (emilyrfl at uw.edu).
   </p>
 </div>
 </div>
