--- a/index.html
+++ b/index.html
@@ -1,26 +1,46 @@
 ---
 layout: default
-title:  'Bryan D Martin'
+title:  'SPA Directed Reading Program'
 ---
 
 <div class="row featurette">
 <div class="col-md-4">
-  <img class="featurette-image img-responsive" src="images/me.jpg">
 </div>
-  
-  
+
+
 <div class="col-md-8">
   <h2 class="featurette-heading">About </h2>
   <p class="lead">
-  I am a PhD student in the <a href = "http://www.stat.washington.edu/">Department of Statistics</a> 
-    at the University of Washington. My research is focused on model development for compositional data applied to the
-    microbiome, advised by 
-    <a href = "https://faculty.washington.edu/dwitten/">Daniela Witten</a> and 
-    <a href = "https://faculty.washington.edu/adwillis/">Amy Willis</a>. My research is supported by an 
-<a href="http://www.nsfgrfp.org/">NSF Graduate Research Fellowship</a>. <br/>
-<br/>
-Before coming to UW, I was an undergraduate at <a href = " https://www.macalester.edu/">Macalester College</a> 
-    where I received degrees in statistics and economics.
+  Welcome to the homepage for the Directed Reading program of the <a href = "http://students.washington.edu/spassc/">Statistics and Probability Association</a>
+  at the University of Washington. A Directed Reading Program (DRP) pairs undergraduates with graduate student mentors for semester-long independent study projects.
+  After an initial succesful program in mathematics was piloted at the University of Chicago in 2003, programs with this mission have been started at a variety of Universities, usually in mathematics departments.
+  Our program at UW, intended for students with a budding interest in statistics, will run for the first time in Winter, 2020.
+  </p>
+  <p>
+    The goal of the program is to increase the sense of community between graduate students and undergraduate students in the department at University of Washington, to give graduate Students
+    valuable mentoring experience, and to allow undergraduates to explore exciting topics in statistics prior to completeing core coursework. 
+  </p>
+</div>
+
+<div class="col-md-8">
+  <h2 class="featurette-heading">For Undergraduates: </h2>
+  <p class="lead">
+  <h3> Who should apply? </h3>
+  <h3> How to apply? </h3>
+  <h3> What should I expect? </h3>
+  As an undergraduate, you should expect to commit around 4 hours per week to independent reading related to your project.
+  You are required to meet with your graduate mentor once a week for an hour, and at the end of the quarter
+  you will complete a writeup of your project and you will give a 10 minute presentation to the other participants.
+  <h3> What types of projects? </h3>
+  </p>
+</div>
+</div>
+
+<div class="col-md-8">
+  <h2 class="featurette-heading">For Graduate Students: </h2>
+  <p class="lead">
+  If you are interested in being a mentor, please contact Anna Neufeld (aneufeld@uw.edu)
+  or Emily Flanagan (emilyrfl at uw.edu).
   </p>
 </div>
 </div>
@@ -28,17 +48,14 @@ Before coming to UW, I was an undergraduate at <a href = " https://www.macaleste
   <div class="col-md-12">
  <div style="position: relative; bottom: -30px;">
        <center><p class = "lead">
-  <a href = "https://github.com/bryandmartin"><i class="fa fa-github" aria-hidden="true"></i> bryandmartin </a> 
+  <a href = "https://github.com/bryandmartin"><i class="fa fa-github" aria-hidden="true"></i> Make this a link to other DRPS </a>
          &nbsp;&nbsp;|&nbsp;&nbsp;
-  <a href = "https://twitter.com/BryanDMartin_"><i class="fa fa-twitter" aria-hidden="true"></i> BryanDMartin_ </a>
+  <a href = "https://twitter.com/BryanDMartin_"><i class="fa fa-twitter" aria-hidden="true"></i> Make this a link to UW Math GRP </a>
          &nbsp;&nbsp;|&nbsp;&nbsp;
-  <a href = "https://scholar.google.com/citations?user=FdKKjKUAAAAJ"> Google Scholar </a>       
+  <a href = "https://scholar.google.com/citations?user=FdKKjKUAAAAJ"> Link to UW Stats?  </a>
          </p></center>
-    </div>                                                                                
+    </div>
  </div>
 
-  
+
 </div><!-- /.container -->
-
-  
-
