--- a/undergrads.html
+++ b/undergrads.html
@@ -5,15 +5,24 @@ title:  'Research'
 
 <h1>Information for Undergraduates</h1>
 
-<p class="lead">
-  Feel free to contact the organizers with additional questions. 
+<div class="col-md-8">
+  <h2 class="featurette-heading">For Undergraduates: </h2>
+  <p class="lead">
+  <h3> Who should apply? </h3>
+  <p>
+  Budding interest in statistics who are passionate. Those without previous research experience and those from
+  underrepresented backgrounds are especially encouraged to apply.  </p>
+  <h3> How to apply? </h3>
+  <p>
+  Put a link here </p>
+  <h3> What should I expect? </h3>
+  <p>
+  As an undergraduate, you should expect to commit around 4 hours per week to independent reading related to your project.
+  You are required to meet with your graduate mentor once a week for an hour, and at the end of the quarter
+  you will complete a writeup of your project and you will give a 10 minute presentation to the other participants.
 </p>
-<h4>Who should apply?</h4>
-<p class="content" style="padding:0px;margin:0px 20px 0px;">
-  add here
-</p>
-<br/>
-<h4>How to apply?</h4>
-<p class="content" style="padding:0px;margin:0px 20px 0px;">
-  more here 
-</p>
+  <h3> What types of projects? </h3>
+  <p>
+  Feel free to contact us if there is something you really want!
+  </p>
+</div>
