contact page float

--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,16 @@ layout: default
 title:  'Contact'
 ---
 
-<h1>Contact</h1>
-
-<h2>Emily Flanagan (SPA president)</h2>
-<p class="lead">
-  <strong>Email:</strong> emilyrfl [a t] uw [d o t] edu <br/>
-  <br/>
-</p>
-
-
-  
- 
+<div class="col-md-8">
+  <h2 class="featurette-heading">Contact </h2>
+  <h3>Emily Flanagan (SPA president)</h3>
+  <p class="lead">
+    <strong>Email:</strong> emilyrfl [a t] uw [d o t] edu <br/>
+    <br/>
+  </p>
+  <h3>Anna Neufeld </h3>
+  <p class="lead">
+    <strong>Email:</strong> aneufeld [a t] uw [d o t] edu <br/>
+    <br/>
+  </p>
+</div>
