remove unneeded icons

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@ title:  'SPA Directed Reading Program'
   <div class="col-md-12">
  <div style="position: relative; bottom: -30px;">
        <center><p class = "lead">
-  <a href = "https://www.drp-network.org/"><i class="fa fa-github" aria-hidden="true"></i> DRP Network </a>
+  <a href = "https://www.drp-network.org/"> DRP Network </a>
          &nbsp;&nbsp;|&nbsp;&nbsp;
-  <a href = "https://sites.uw.edu/wdrp"><i class="fa fa-twitter" aria-hidden="true"></i> UW Math DRP </a>
+  <a href = "https://sites.uw.edu/wdrp"> UW Math DRP </a>
          &nbsp;&nbsp;|&nbsp;&nbsp;
   <a href = "stat.washington.edu"> UW Statistics</a>
          </p></center>
