--- a/undergrads.html
+++ b/undergrads.html
@@ -3,10 +3,8 @@ layout: default
 title:  'Research'
 ---
 
-<h1>Information for Undergraduates</h1>
-
 <div class="col-md-8">
-  <h2 class="featurette-heading">For Undergraduates: </h2>
+  <h2 class="featurette-heading">Information For Undergraduates: </h2>
   <p class="lead">
   <h3> Who should apply? </h3>
   <p>
