--- a/mentors.html
+++ b/mentors.html
@@ -1,28 +1,23 @@
 ---
 layout: default
-title:  'Teaching'
+title:  'Mentors and Projects'
 ---
 
-<h1>Teaching</h1>
-
-<p class="lead">
-<h4>Marine Biological Laboratory, University of Chicago:</h4>
+<h1>Current Mentors and Projects</h1>
+<h4>Anna Neufeld</h4>
 <p class="content" style="padding:0px;margin:0px 20px 0px;">
-    <li style="padding:0px;margin:0px 20px 0px;"> <i>Research Facilitator:</i> Strategies and Techniques for Analyzing Microbial Population Structures (STAMPS) </li>
-    <li style="padding:0px;margin:0px 20px 0px;"> <a href="https://www.mbl.edu/education/courses/stamps/"> Course webpage </a> </li>
+    <li style="padding:0px;margin:0px 20px 0px;"> <i>Please add project</i> A project</li>
+    <li style="padding:0px;margin:0px 20px 0px;"> <a href="google.com"> Link for more info</a> </li>
 <br/>
-</p> 
-    
-<h4>University of Washington:</h4>
+</p>
+
+<h4>Sarah Teichman</h4>
 <p class="content" style="padding:0px;margin:0px 20px 0px;">
-    <li style="padding:0px;margin:0px 20px 0px;"> <i>Teaching Assistant:</i> STAT 221, Statistical Concepts &amp; Methods for the Social Sciences, Autumn quarter 2015 &ndash; Spring quarter 2016 </li>
-    <li style="padding:0px;margin:0px 20px 0px;"> <i>Drop-in tutor:</i> <a href="https://www.stat.washington.edu/index.php/academics/tutoring"> Statistics Tutor &amp; Study Center</a>, Autumn quarter 2015 &ndash; Winter quarter 2018 </li>
-  <br/> 
-</p> 
-<h4>Macalester College:</h4>
+    <li style="padding:0px;margin:0px 20px 0px;"> <i>Please add!!!</i> Please add!!!</li>
+    <li style="padding:0px;margin:0px 20px 0px;"> <i>Etc!!!</i>   Contact info??</li>
+  <br/>
+</p>
+<h4>Anupreet:</h4>
 <p class="content" style="padding:0px;margin:0px 20px 0px;">
-    <li style="padding:0px;margin:0px 20px 0px;"> <i>Supplemental Instructor:</i> ECON 361, Intermediate Microeconomic Analysis, August 2014 &ndash; December 2014 </li>
-    <li style="padding:0px;margin:0px 20px 0px;"> <i>Teaching Assistant:</i> MATH 254, Probability and Mathematical Statistics, January 2015 &ndash; May 2015 </li>
-    <li style="padding:0px;margin:0px 20px 0px;"> <i>Teaching Assistant:</i> ECON 361, Intermediate Microeconomic Analysis, January 2014 &ndash; May 2014 </li>
-    <li style="padding:0px;margin:0px 20px 0px;"> <i>Teaching Assistant:</i> ECON 119, Principles of Economics, September 2013 &ndash; December 2014 </li>
-</p> 
+    <li style="padding:0px;margin:0px 20px 0px;"> <i>Hi!!!:</i> Hello!!! </li>
+</p>
