--- a/mentors.html
+++ b/mentors.html
@@ -3,21 +3,30 @@ layout: default
 title:  'Mentors and Projects'
 ---
 
-<h1>Current Mentors and Projects</h1>
+
+<div class="col-md-8">
+<h1>Winter 2020, Mentors and Projects</h1>
 <h4>Anna Neufeld</h4>
 <p class="content" style="padding:0px;margin:0px 20px 0px;">
     <li style="padding:0px;margin:0px 20px 0px;"> <i>Please add project</i> A project</li>
-    <li style="padding:0px;margin:0px 20px 0px;"> <a href="google.com"> Link for more info</a> </li>
 <br/>
 </p>
 
 <h4>Sarah Teichman</h4>
 <p class="content" style="padding:0px;margin:0px 20px 0px;">
     <li style="padding:0px;margin:0px 20px 0px;"> <i>Please add!!!</i> Please add!!!</li>
-    <li style="padding:0px;margin:0px 20px 0px;"> <i>Etc!!!</i>   Contact info??</li>
   <br/>
+</p>
+<h4>Bryan Martin</h4>
+<p class="content" style="padding:0px;margin:0px 20px 0px;">
+    <li style="padding:0px;margin:0px 20px 0px;"> <i>Hi!!!:</i> Hello!!! </li>
 </p>
 <h4>Anupreet:</h4>
 <p class="content" style="padding:0px;margin:0px 20px 0px;">
     <li style="padding:0px;margin:0px 20px 0px;"> <i>Hi!!!:</i> Hello!!! </li>
 </p>
+<h4>Shane:</h4>
+<p class="content" style="padding:0px;margin:0px 20px 0px;">
+    <li style="padding:0px;margin:0px 20px 0px;"> <i>Hi!!!:</i> Hello!!! </li>
+</p>
+</div>
