Change homepage layout

--- a/index.html
+++ b/index.html
@@ -18,10 +18,25 @@ title:  'SPA Directed Reading Program'
 
 <div class="col-md-8">
   <h2 class="featurette-heading">What is a DRP? </h2>
-  <p class="lead">
-  After an initial succesful program in mathematics was piloted at the University of Chicago in 2003, programs with this mission have been started at a variety of Universities, usually in mathematics departments. Our program at UW, intended for students with a budding interest in statistics, will run for the first time in Winter, 2020.
+  <p>
+  After an initial succesful program in mathematics was piloted at the University of Chicago in 2003, programs with this mission have been started at a variety of Universities, usually in mathematics departments.
   </p>
 </div>
+
+<div class="col-md-8">
+  <h2 class="featurette-heading">What is SPA? </h2>
+  <p>
+    SPA is the Statistics and Probability Association at the University of Washington.
+    </p>
+    </div>
+
+<div class="col-md-8">
+      <h2 class="featurette-heading">What is the SPA DRP? </h2>
+      <p>
+Our program at UW, intended for students with a budding interest in statistics, will run for the first time in Winter, 2020.
+</p>
+</div>
+
 </div>
 
   <div class="col-md-12">
