--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@ title:  'SPA Directed Reading Program'
       <h2 class="featurette-heading">What is the SPA DRP? </h2>
       <p>
 Our program at UW, intended for students with a budding interest in statistics, will run for the first time in Winter, 2020.
+Our goals are to foster department community between undergraduates and graduate students, provide opportunities for passionate
+undergraduates to explore statistics outside of the traditional curriculum, and provide graduate students with valuable
+mentoring experience.
 </p>
 </div>
 
