--- a/contact.html
+++ b/contact.html
@@ -5,14 +5,22 @@ title:  'Contact'
 
 <div class="col-md-8">
   <h2 class="featurette-heading">Contact </h2>
-  <h3>Emily Flanagan (SPA president)</h3>
+  <p class="lead">
+  Please contact the program organizers with any questions.
+  </p>
+  <h4>Emily Flanagan (SPA president)</h4>
   <p class="lead">
     <strong>Email:</strong> emilyrfl [a t] uw [d o t] edu <br/>
     <br/>
   </p>
-  <h3>Anna Neufeld </h3>
+  <h4>Anna Neufeld </h4>
   <p class="lead">
     <strong>Email:</strong> aneufeld [a t] uw [d o t] edu <br/>
+    <br/>
+  </p>
+  <h4> Tyler McCormick (Faculty advisor)</h4>
+  <p class="lead">
+    <strong>Email:</strong> add here <br/>
     <br/>
   </p>
 </div>
