--- a/mentors.html
+++ b/mentors.html
@@ -5,7 +5,7 @@ title:  'Mentors and Projects'
 
 
 <div class="col-md-8">
-<h1>Winter 2020, Mentors and Projects</h1>
+  <h2 class="featurette-heading">Winter 2020, Mentors and Projects: </h2>
 <h4>Anna Neufeld</h4>
 <p class="content" style="padding:0px;margin:0px 20px 0px;">
     <li style="padding:0px;margin:0px 20px 0px;"> <i>Please add project</i> A project</li>
