--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ title:  'Program Goals'
 ---
 
 <div class="col-md-8">
-  <h2 class="featurette-heading">Program Goals and Additional Information</h2>
+  <h2 class="featurette-heading"> Program Goals and Additional Information </h2>
   <p>
   <h3> Program Goals</h3>
   <p>
@@ -13,15 +13,21 @@ title:  'Program Goals'
   statistics. </li>
   <li> Provide undergraduates with opportunities to engage with statistics outside of the traditional
   curriculum </li>
-  <li> Due to UW's major application process, UW undergraduates who feel inspired by their introductory statistics courses sometimes must
-  wait many quarters before taking additional statistics courses. We would like to provide opportunities
-  for these students to continue with statistics during this break and not lose momentum. </li>
   <li> Encourage undergraduates from traditionally underrepresented backgrounds to explore statistics. </li>
   <li> Provide graduate students with mentoring opportunities </li>
   </ul>
   </p>
   <h3> Intended Audience </h3>
   <p>
+    Due to UW's major application process, UW undergraduates who feel inspired by their introductory statistics courses sometimes must
+    wait many quarters before taking additional statistics courses. We would like to provide opportunities
+    for these students to continue with statistics during this break and not lose momentum. Therefore, we hope that
+    many of our projects will be accessible to students who have completed only Stat 311 or an equivalent. Stat 311
+    is a course where students should learn basic statistical literacy, basic probability, and inference including
+    confidence intervals and hypothesis tests. Students also see a small amount of R programming in Stat 311.
+    We understand that many mentors may want to mentor undergraduates in projects that require more prerequisites
+    than this. Some mentors may specify additional prerequisites for their topic, such as Linear Algebra, CSE 142/143,
+    or Stat 340.
    </p>
   <h3> Program Structure</h3>
   <p>
@@ -39,7 +45,12 @@ materials, </li>
   background. </li>
   <li> Mentor selects introductory text in the topic that is accessible to student, as well as a few
   accessible application papers. </li>
-  <li> First half of quarter: undergraduate </li>
+  <li> First half of quarter: undergraduate reads the text and meets with mentor once a week to discuss questions and interesting
+  points. </li>
+  <li> Middle of quarter: undergraduate looks independently for additional literature related to the topic and comes
+  up with an idea for a final project. </li>
+  <li> Last few weeks: undergraduate plans and completes an applied project to present on (i.e. applied the
+    method that they studied to a real dataset.  </li>
   </ul>
   </p>
 </div>
