--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ title:  'SPA Directed Reading Program'
 Our program at UW, intended for students with a budding interest in statistics, will run for the first time in Winter, 2020.
 Our goals are to foster department community between undergraduates and graduate students, provide opportunities for passionate
 undergraduates to explore statistics outside of the traditional curriculum, and provide graduate students with valuable
-mentoring experience. For more information about the program goals, see the about page. 
+mentoring experience. For more information about the program goals, see the <a href="https://anna-neufeld.github.io/spa_drp/about.html"> about </a> page. 
 </p>
 </div>
 
