--- a/mentors.html
+++ b/mentors.html
@@ -6,7 +6,11 @@ title:  'Mentors and Projects'
 
 <div class="col-md-8">
   <h2 class="featurette-heading">Winter 2020, Mentors and Projects: </h2>
-  <h4>Shane:</h4>
+  <h4>Zhaoqi Li:</h4>
+  <p class="content" style="padding:0px;margin:0px 20px 0px;">
+      <li style="padding:0px;margin:0px 20px 0px;"> <i>Hi!!!:</i> Hello!!! </li>
+  </p>
+  <h4>Shane Lubold:</h4>
   <p class="content" style="padding:0px;margin:0px 20px 0px;">
       <li style="padding:0px;margin:0px 20px 0px;"> <i>Hi!!!:</i> Hello!!! </li>
   </p>
@@ -14,11 +18,19 @@ title:  'Mentors and Projects'
   <p class="content" style="padding:0px;margin:0px 20px 0px;">
       <li style="padding:0px;margin:0px 20px 0px;"> <i>Hi!!!:</i> Hello!!! </li>
   </p>
+  <h4>Zhen Miao:</h4>
+  <p class="content" style="padding:0px;margin:0px 20px 0px;">
+      <li style="padding:0px;margin:0px 20px 0px;"> <i>Hi!!!:</i> Hello!!! </li>
+  </p>
 <h4>Anna Neufeld</h4>
 <p class="content" style="padding:0px;margin:0px 20px 0px;">
     <li style="padding:0px;margin:0px 20px 0px;"> <i>Please add project</i> A project</li>
 </p>
-<h4>Anupreet:</h4>
+<h4>Johnny Paige:</h4>
+<p class="content" style="padding:0px;margin:0px 20px 0px;">
+    <li style="padding:0px;margin:0px 20px 0px;"> <i>Hi!!!:</i> Hello!!! </li>
+</p>
+<h4>Anupreet Porwall:</h4>
 <p class="content" style="padding:0px;margin:0px 20px 0px;">
     <li style="padding:0px;margin:0px 20px 0px;"> <i>Hi!!!:</i> Hello!!! </li>
 </p>
