Added one new program goal

--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@ title:  'Program Goals'
   statistics. </li>
   <li> Provide undergraduates with opportunities to engage with statistics outside of the traditional
   curriculum </li>
+  <li> Provide undergraduates with valuable independent learning and communication skills. </li>
   <li> Encourage undergraduates from traditionally underrepresented backgrounds to explore statistics. </li>
   <li> Provide graduate students with mentoring opportunities </li>
   </ul>
