--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@ title:  'Program Goals'
   <li> Provide undergraduates with valuable independent learning and communication skills. </li>
   <li> Encourage undergraduates from traditionally underrepresented backgrounds to explore statistics. </li>
   <li> Provide graduate students with mentoring opportunities </li>
+  <li> From the DRP Network Website: By giving undergraduates individual attention, and by focusing on reading rather than research, the Directed Reading Program Network provides opportunities for fundamental skill-building. Further, the program organizers strongly believe that the work conducted within DRPs can help mitigate mechanisms that promote long-standing stigmas- especially those surrounding underrepresented groups in mathematics- that are often triggered in traditional classroom settings.  </li>
   </ul>
   </p>
   <h3> Intended Audience </h3>
