--- a/contact.html
+++ b/contact.html
@@ -8,19 +8,19 @@ title:  'Contact'
   <p class="lead">
   Please contact the program organizers with any questions.
   </p>
-  <h4>Emily Flanagan (SPA president)</h4>
-  <p class="lead">
+  <h4>Emily Flanagan (SPA President / Undergraduate Rep)</h4>
+  <p>
     <strong>Email:</strong> emilyrfl [a t] uw [d o t] edu <br/>
     <br/>
   </p>
-  <h4>Anna Neufeld </h4>
-  <p class="lead">
+  <h4>Anna Neufeld (Graduate Student Organizer)</h4>
+  <p>
     <strong>Email:</strong> aneufeld [a t] uw [d o t] edu <br/>
     <br/>
   </p>
-  <h4> Tyler McCormick (Faculty advisor)</h4>
+  <h4> Graduate Student Organizing Committee</h4>
   <p class="lead">
-    <strong>Email:</strong> add here <br/>
+    Peter Gao, Bryan Martin, Sarah Teichman
     <br/>
   </p>
 </div>
