--- a/mentors.html
+++ b/mentors.html
@@ -1,14 +1,27 @@
 ---
 layout: default
-title:  'Mentors and Projects'
+title:  'Current Mentors and Project Descriptions'
 ---
 
 
 <div class="col-md-8">
   <h2 class="featurette-heading">Winter 2020, Mentors and Projects: </h2>
+  <p> The following projects are available in Winter 2020. </p>
   <h4>Zhaoqi Li:</h4>
   <p class="content" style="padding:0px;margin:0px 20px 0px;">
       <li style="padding:0px;margin:0px 20px 0px;"> <i>Hi!!!:</i> Hello!!! </li>
+  </p>
+  <h4> Kristof Glauninger: Nonparametric Regression </h4>
+  <p class="content" style="padding:0px;margin:0px 20px 0px;">
+      <li style="padding:0px;margin:0px 20px 0px;"> <i> Familiarity with linear regression and basic probability, comfort with algebra, some calculus
+</i> </li>
+<li style="padding:0px;margin:0px 20px 0px;"> <i> Nonparametric statistical methods
+  have seen an explosion in popularity as datasets have increased in size and complexity.
+  The goal of this project will be to introduce students who are familiar with parametric regression
+  models to a nonparametric setting. We will explore some of the basic theory and applications of these models,
+  as well as an interesting case where we can achieve parametric convergence rates in a nonparametric setting.
+</i> </li>
+
   </p>
   <h4>Shane Lubold:</h4>
   <p class="content" style="padding:0px;margin:0px 20px 0px;">
@@ -30,14 +43,28 @@ title:  'Mentors and Projects'
 <p class="content" style="padding:0px;margin:0px 20px 0px;">
     <li style="padding:0px;margin:0px 20px 0px;"> <i>Hi!!!:</i> Hello!!! </li>
 </p>
-<h4>Anupreet Porwall:</h4>
+<h4>Anupreet Porwal: Bayesian Linear regression and applications </h4>
 <p class="content" style="padding:0px;margin:0px 20px 0px;">
-    <li style="padding:0px;margin:0px 20px 0px;"> <i>Hi!!!:</i> Hello!!! </li>
+    <li style="padding:0px;margin:0px 20px 0px;"> <i>Prerequisites: </i> Basic knowledge of probability distributions at the level of
+      Stat 394 or Stat 340. Knowledge of Linear Algebra is essential for this project. Familiarity with a programming language may be helpful.</li>
+      <li> Often when we fit models to practical applications, we have some prior understanding of the context of the problem/field which could potentially be useful to tune our model along with the data. For example, if you are trying to model the reply times of emails from dept. chair to professors, information about the designation of professors (full-time/assistant) can be helpful information.
+Bayesian statistics provides a formal way to incorporate our prior beliefs and information into the model and is particularly useful as it accurately helps to quantify the uncertainty in our inferences. In this project, we wish to discuss basics of Bayes theorem, Bayesian version of Linear regression and if time permits, we will learn about probabilistic matrix factorization (Recommendation systems) and apply these techniques to an interesting problem.</li> 
 </p>
 
-<h4>Sarah Teichman</h4>
+<h4>Sarah Teichman: Networks </h4>
 <p class="content" style="padding:0px;margin:0px 20px 0px;">
-    <li style="padding:0px;margin:0px 20px 0px;"> <i>Please add!!!</i> Please add!!!</li>
+    <li style="padding:0px;margin:0px 20px 0px;"> <i> Prerequisites: </i> Stat 311. Some R is useful
+    but not required. </li>
+    <li> Most of the data that you see in STAT 311 are assumed to be independent.
+      However, a lot of interesting datasets include information about individual observations
+      and the relationships between them. This type of data can be analyzed as networks, in which nodes
+      represent individuals and edges represent relationships between them.
+       Networks can be used to study interactions between social groups,
+        the spread of contagious diseases, biological cycles, etc.
+We will use the textbook "Statistical Analysis of Network Data," along with it's companion text
+ "Statistical Analysis of Network Data in R" by Eric D. Kolaczyk. We will additionally read one or
+  two papers about an application of network analysis and/or analyze a small
+  network in R (based on interest of the student). </li>
 </p>
 
 
