--- a/undergrads.html
+++ b/undergrads.html
@@ -8,19 +8,18 @@ title:  'Undergraduates'
   <p class="lead">
   <h3> Who should apply? </h3>
   <p>
-  Budding interest in statistics who are passionate. Those without previous research experience and those from
-  underrepresented backgrounds are especially encouraged to apply.  </p>
+    Anyone with a budding interest in statistics should apply! You do not need to
+    be a statistics major. Those without previous research experience and those from
+  underrepresented backgrounds are especially encouraged to apply.
+</p>
   <h3> How to apply? </h3>
   <p>
-  Put a link here </p>
+  The Winter 2020 application can be found
+  <a href = "https://docs.google.com/forms/d/e/1FAIpQLSe4-eyOvnf1cGIExP_-PFufoQjyTkZfUbvcMGbZGBmFZRTB7A/viewform?usp=sf_link" > here </a> </p>
   <h3> What should I expect? </h3>
   <p>
   As an undergraduate, you should expect to commit around 4 hours per week to independent reading related to your project.
   You are required to meet with your graduate mentor once a week for an hour, and at the end of the quarter
   you will complete a writeup of your project and you will give a 10 minute presentation to the other participants.
 </p>
-  <h3> What types of projects? </h3>
-  <p>
-  Feel free to contact us if there is something you really want!
-  </p>
 </div>
