Adding project descriptions

--- a/mentors.html
+++ b/mentors.html
@@ -7,10 +7,6 @@ title:  'Current Mentors and Project Descriptions'
 <div class="col-md-8">
   <h2 class="featurette-heading">Winter 2020, Mentors and Projects: </h2>
   <p> The following projects are available in Winter 2020. </p>
-  <h4>Zhaoqi Li:</h4>
-  <p class="content" style="padding:0px;margin:0px 20px 0px;">
-      <li style="padding:0px;margin:0px 20px 0px;"> <i>Hi!!!:</i> Hello!!! </li>
-  </p>
   <h4> Kristof Glauninger: Nonparametric Regression </h4>
   <p class="content" style="padding:0px;margin:0px 20px 0px;">
       <li style="padding:0px;margin:0px 20px 0px;"> <i> Familiarity with linear regression and basic probability, comfort with algebra, some calculus
@@ -21,7 +17,20 @@ title:  'Current Mentors and Project Descriptions'
   models to a nonparametric setting. We will explore some of the basic theory and applications of these models,
   as well as an interesting case where we can achieve parametric convergence rates in a nonparametric setting.
 </i> </li>
-
+  </p>
+  <h4>Zhaoqi Li</h4>
+  <p class="content" style="padding:0px;margin:0px 20px 0px;">
+      <li style="padding:0px;margin:0px 20px 0px;"> <i> Prerequisites</i> Some familiarity of basic statistical background
+        and probability theory in the level of STAT 311;
+        some knowledge of Maximum Likelihood Estimation is preferred;
+        some familiarity of basic programming is preferred;
+         an enthusiasm of reading and experimenting is encouraged.  </li>
+         <li> We will discuss the relationship between statistics and machine learning, one of the most popular fields in the world,
+           and how statistical techniques could be used in the machine learning framework.
+            Topics may include classifiers (e.g., Decision Tree, Naive Bayes),
+             training (what is training and the relation to likelihood inference), etc.
+           The design could range from experimental to theoretical,
+           depending on the background of the student. </li> 
   </p>
   <h4>Shane Lubold:</h4>
   <p class="content" style="padding:0px;margin:0px 20px 0px;">
@@ -39,16 +48,18 @@ title:  'Current Mentors and Project Descriptions'
 <p class="content" style="padding:0px;margin:0px 20px 0px;">
     <li style="padding:0px;margin:0px 20px 0px;"> <i>Please add project</i> A project</li>
 </p>
-<h4>Johnny Paige:</h4>
+<h4>Johnny Paige: Working with Spatial Data</h4>
 <p class="content" style="padding:0px;margin:0px 20px 0px;">
-    <li style="padding:0px;margin:0px 20px 0px;"> <i>Hi!!!:</i> Hello!!! </li>
+    <li style="padding:0px;margin:0px 20px 0px;"> <i> Prerequisites </i> Probability at the level of STAT 340. MATH 308 or some background in linear algebra, and some programming experience (R language strongly recommended). </li>
+    <li> Classical methods in statistics such as regression either assume data is independent of each other or their correlation structure is already known.  Yet datasets in climatology, forestry, demography, epidemiology, astronomy, and other areas of study exhibit signs of spatial correlation—nearby observations tend to be more similar. Spatial statistics is the study of such data: how can we “borrow strength” from nearby observations to make predictions at entirely new locations? How can we estimate the correlation structures exhibited by the data, and better determine how underlying natural processes affect our observations? In this project, we will explore how to model data that is correlated in space, and use them to make spatial predictions. The specific project is flexible, depending on your interests and background.
+    </li>
 </p>
 <h4>Anupreet Porwal: Bayesian Linear regression and applications </h4>
 <p class="content" style="padding:0px;margin:0px 20px 0px;">
     <li style="padding:0px;margin:0px 20px 0px;"> <i>Prerequisites: </i> Basic knowledge of probability distributions at the level of
       Stat 394 or Stat 340. Knowledge of Linear Algebra is essential for this project. Familiarity with a programming language may be helpful.</li>
       <li> Often when we fit models to practical applications, we have some prior understanding of the context of the problem/field which could potentially be useful to tune our model along with the data. For example, if you are trying to model the reply times of emails from dept. chair to professors, information about the designation of professors (full-time/assistant) can be helpful information.
-Bayesian statistics provides a formal way to incorporate our prior beliefs and information into the model and is particularly useful as it accurately helps to quantify the uncertainty in our inferences. In this project, we wish to discuss basics of Bayes theorem, Bayesian version of Linear regression and if time permits, we will learn about probabilistic matrix factorization (Recommendation systems) and apply these techniques to an interesting problem.</li> 
+Bayesian statistics provides a formal way to incorporate our prior beliefs and information into the model and is particularly useful as it accurately helps to quantify the uncertainty in our inferences. In this project, we wish to discuss basics of Bayes theorem, Bayesian version of Linear regression and if time permits, we will learn about probabilistic matrix factorization (Recommendation systems) and apply these techniques to an interesting problem.</li>
 </p>
 
 <h4>Sarah Teichman: Networks </h4>
