Changing contact page

--- a/contact.html
+++ b/contact.html
@@ -7,20 +7,23 @@ title:  'Contact'
   <h2 class="featurette-heading">Contact </h2>
   <p class="lead">
   Please contact the program organizers with any questions.
+  <h4> Student Organizing Committee: </h4>
+  <p>
+    Emily Flanagan, Peter Gao, Bryan Martin, Anna Neufeld, Sarah Teichman
+    <br/>
   </p>
-  <h4>Emily Flanagan (SPA President / Undergraduate Rep)</h4>
+  <p class="lead">
+    Contact Information:
+  </p>
+  <h4>Emily Flanagan (SPA President / Undergraduate Rep) </h4>
   <p>
     <strong>Email:</strong> emilyrfl [a t] uw [d o t] edu <br/>
     <br/>
   </p>
-  <h4>Anna Neufeld (Graduate Student Organizer)</h4>
+  <h4>Anna Neufeld (Graduate Student)</h4>
   <p>
     <strong>Email:</strong> aneufeld [a t] uw [d o t] edu <br/>
     <br/>
   </p>
-  <h4> Graduate Student Organizing Committee</h4>
-  <p class="lead">
-    Peter Gao, Bryan Martin, Sarah Teichman
-    <br/>
-  </p>
+
 </div>
