--- a/contact.html
+++ b/contact.html
@@ -25,5 +25,9 @@ title:  'Contact'
     <strong>Email:</strong> aneufeld [a t] uw [d o t] edu <br/>
     <br/>
   </p>
-
+  <h4> Faculty Advisors (Winter 2020) </h4>
+  <p>
+    Dan Pollack and Tyler McCormick
+    <br/>
+  </p>
 </div>
