updating main paige

--- a/index.html
+++ b/index.html
@@ -8,31 +8,39 @@ title:  'SPA Directed Reading Program'
   <h2 class="featurette-heading">About </h2>
   <p class="lead">
   Welcome to the homepage for the Directed Reading program of the <a href = "http://students.washington.edu/spassc/">Statistics and Probability Association</a>
-  at the University of Washington. A Directed Reading Program (DRP) pairs undergraduates with graduate student mentors for semester-long independent study projects.
+  at the University of Washington.
     </p>
 </div>
 
 <div class="col-md-8">
   <h2 class="featurette-heading">What is a DRP? </h2>
   <p>
-  After an initial succesful program in mathematics was piloted at the University of Chicago in 2003, programs with this mission have been started at a variety of Universities, usually in mathematics departments.
+ A Directed Reading Program is a one-on-one mentoring program in which graduate students mentor
+ undergrads in reading projects. Initiated by graduate students in mathematics at the
+ Universiy of Chicago in 2003, DRPs now run in mathematics departments at 17 institutions around
+ the country. DRPs foster community between graduate
+ students and undergraduates, help undergraduates develop vital academic skills and engage with material
+ outside of the classroom, and provide graduate students with valuable mentoring experience. For more information, see the webpage of the <a href = "https://www.drp-network.org/"> DRP Network </a>.
   </p>
 </div>
 
 <div class="col-md-8">
   <h2 class="featurette-heading">What is SPA? </h2>
   <p>
-    SPA is the Statistics and Probability Association at the University of Washington.
+    SPA is the undergraduate Statistics and Probability Association at the University of Washington.
     </p>
     </div>
 
 <div class="col-md-8">
       <h2 class="featurette-heading">What is the SPA DRP? </h2>
       <p>
-Our program at UW, intended for students with a budding interest in statistics, will run for the first time in Winter, 2020.
-Our goals are to foster department community between undergraduates and graduate students, provide opportunities for passionate
-undergraduates to explore statistics outside of the traditional curriculum, and provide graduate students with valuable
-mentoring experience. For more information about the program goals, see the <a href="https://anna-neufeld.github.io/spa_drp/about.html"> about </a> page. 
+        Our program will run for the first time during Winter Quarter, 2020. We invite students
+        from all mathematical, statistical, and personal backgrounds
+        to apply. The main function of the directed reading program is to introduce undergraduate students
+         to statistics outside of the classroom environment and help them gain skills in
+         critically reading statistical texts and communicating statistical material.
+         These skills can be gained in various ways, and there will be projects catered to various levels of
+         statistical experience. For more information about the program goals, see the <a href="https://anna-neufeld.github.io/spa_drp/about.html"> about </a> page.
 </p>
 </div>
 
