modifying homepage and stuff

--- a/about.html
+++ b/about.html
@@ -20,12 +20,11 @@ title:  'Program Goals'
   </p>
   <h3> Intended Audience </h3>
   <p>
-    Currently, UW undergraduates who feel inspired by their introductory statistics courses sometimes must
+    Currently, UW undergraduates who enjoy their introductory statistics courses may need to
     wait many quarters before taking additional statistics courses. We would like to provide opportunities
     for these students to continue with statistics during this break and not lose momentum. Therefore, we hope that
     many of our projects will be accessible to students who have completed only Stat 311 or an equivalent. Stat 311
-    is a course where students should learn basic statistical literacy, basic probability, and inference including
-    confidence intervals and hypothesis tests. Students also see a small amount of R programming in Stat 311.
+    is a course where students should learn the basics of statistical literacy, probability, and inference.
     We understand that many mentors may want to mentor undergraduates in projects that require more prerequisites
     than this. Some mentors may specify additional prerequisites for their topic, such as Linear Algebra, CSE 142/143,
     or Stat 340.
@@ -33,25 +32,12 @@ title:  'Program Goals'
   <h3> Program Structure</h3>
   <p>
   <ul>
-<li> First week of quarter- 1 hour training session for mentors through the Center for Teaching and learning </li>
-<li> Weeks 1-10 of quarter: 1 hour meeting between mentee and mentor each week. Mentor provides structure or reading
-materials, </li>
-<li> Last week of quarter- All mentors and all mentees attend final presentation session. </li>
+<li> Mentor chooses broad topic in statistics and a set of related readings that are accessible to undergraduates </li>
+<li> Mentor and mentee meet for 1 hour per week during the 10 week quarter to discuss readings. </li>
+<li> Aroung week 6, mentor and mentee transition from reading broad texts to focusing on a specific project
+that interests the mentee. The mentee begins planning a final talk and writeup, with feedback
+from the mentor. </li> 
+<li> Last week of quarter- All mentors and all mentees attend final presentation session and pizza party. </li>
   </ul>
 </p>
-  <h3> Example of Project Format </h3>
-  <p>
-  <ul>
-  <li> Mentor chooses broad topic in statistics that can be accessible to someone with an intro statistics
-  background. </li>
-  <li> Mentor selects introductory text in the topic that is accessible to student, as well as a few
-  accessible application papers. </li>
-  <li> First half of quarter: undergraduate reads the text and meets with mentor once a week to discuss questions and interesting
-  points. </li>
-  <li> Middle of quarter: undergraduate looks independently for additional literature related to the topic and comes
-  up with an idea for a final project. </li>
-  <li> Last few weeks: undergraduate plans and completes an applied project to present on (i.e. applied the
-    method that they studied to a real dataset.  </li>
-  </ul>
-  </p>
 </div>
