--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title:  'SPA Directed Reading Program'
   <h2 class="featurette-heading">About </h2>
   <p class="lead">
   Welcome to the homepage for the Directed Reading program of the <a href = "http://students.washington.edu/spassc/">Statistics and Probability Association</a>
-  at the University of Washington.
+  (SPA) at the University of Washington.
     </p>
 </div>
 
@@ -36,10 +36,7 @@ title:  'SPA Directed Reading Program'
       <p>
         Our program will run for the first time during Winter Quarter, 2020. We invite students
         from all mathematical, statistical, and personal backgrounds
-        to apply. The main function of the directed reading program is to introduce undergraduate students
-         to statistics outside of the classroom environment and help them gain skills in
-         critically reading statistical texts and communicating statistical material.
-         These skills can be gained in various ways, and there will be projects catered to various levels of
+        to apply. There will be projects catered to various levels of
          statistical experience. For more information about the program goals, see the <a href="https://anna-neufeld.github.io/spa_drp/about.html"> about </a> page.
 </p>
 </div>
